--- a/Day07/style.css
+++ b/Day07/style.css
@@ -23,3 +23,10 @@ button{
     color: white;
     cursor: pointer;
 }
+
+.counter{
+    height: 200px;
+    width: 300px;
+    background-color: rgb(173, 124, 50);
+    text-align: center;
+}
